--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Fantasy XC</title>
-</head>
+<head><meta charset="UTF-8"><title>Fantasy XC</title></head>
 <body>
-  <h1>Welcome to Fantasy Cross Country</h1>
+  <h1>Welcome to Fantasy XC</h1>
   <p><a href="/submit">Submit your team</a></p>
+  <p><a href="/teams">View submitted teams</a></p>
 </body>
 </html>
